--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 		    <version>1.2.17</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+		<dependency>
+		    <groupId>org.mariadb.jdbc</groupId>
+		    <artifactId>mariadb-java-client</artifactId>
+		    <version>2.1.2</version>
+		</dependency>
 		
 		
 		<!-- Spring -->
