--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
 		    <version>2.1.2</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
+		<dependency>
+		    <groupId>com.zaxxer</groupId>
+		    <artifactId>HikariCP</artifactId>
+		    <version>2.7.4</version>
+		</dependency>
+		
+		
 		
 		<!-- Spring -->
 		<dependency>
