--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,8 +28,17 @@
 
   <filter>
   	<filter-name>encoding</filter-name>
-  	<filter-class></filter-class>
+  	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+  	<init-param>
+  		<param-name>encoding</param-name>
+  		<param-value>UTF-8</param-value>
+  	</init-param>
   </filter>
+  
+  <filter-mapping>
+  	<filter-name>encoding</filter-name>
+  	<servlet-name>appServlet</servlet-name>
+  </filter-mapping>
 </web-app>
 
 
