--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,18 @@
   
   <filter-mapping>
   	<filter-name>encoding</filter-name>
+  	<url-pattern>/*</url-pattern>
   	<servlet-name>appServlet</servlet-name>
+  </filter-mapping>
+  
+  <filter>
+	<filter-name>springSecurityFilterChain</filter-name>
+	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+	
+  <filter-mapping>
+	<filter-name>springSecurityFilterChain</filter-name>
+	<url-pattern>/*</url-pattern>
   </filter-mapping>
 </web-app>
 
